[gd_scene load_steps=2 format=3 uid="uid://bta45gmfb3gnr"]

[ext_resource type="Script" uid="uid://bn2bu5d5tw6vk" path="res://scripts/visible_detection.gd" id="1_mbnlf"]

[node name="VisibleDetection" type="Node2D"]
script = ExtResource("1_mbnlf")

[node name="DetectionRayUp" type="RayCast2D" parent="."]
target_position = Vector2(50, -10)
collision_mask = 51
collide_with_areas = true

[node name="DetectionRayMid" type="RayCast2D" parent="."]
target_position = Vector2(50, 0)
collision_mask = 51
collide_with_areas = true

[node name="DetectionRayDown" type="RayCast2D" parent="."]
target_position = Vector2(50, 10)
collision_mask = 51
collide_with_areas = true
